RESOLVED FIXED115963
REGRESSION (r149749): Video becomes invisible when it starts playing at newyorkbygehry.com
https://bugs.webkit.org/show_bug.cgi?id=115963
Summary REGRESSION (r149749): Video becomes invisible when it starts playing at newyo...
mitz
Reported 2013-05-11 10:52:37 PDT
To reproduce, navigate to the URL and click the Play button in the middle of the page. As the video starts playing, it turns invisible, revealing the gray background behind. This is a regression caused by <http://trac.webkit.org/r149749>, the fix for bug 106183.
Attachments
Proposed patch (37.66 KB, patch)
2013-05-12 14:03 PDT, Eric Carlson
no flags
mitz
Comment 1 2013-05-11 10:53:18 PDT
Eric Carlson
Comment 2 2013-05-12 14:03:06 PDT
Created attachment 201509 [details] Proposed patch
Dean Jackson
Comment 3 2013-05-12 21:37:41 PDT
Comment on attachment 201509 [details] Proposed patch I think you need to add the svn mime type or something.
WebKit Commit Bot
Comment 4 2013-05-12 23:40:16 PDT
Comment on attachment 201509 [details] Proposed patch Clearing flags on attachment: 201509 Committed r149989: <http://trac.webkit.org/changeset/149989>
WebKit Commit Bot
Comment 5 2013-05-12 23:40:18 PDT
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 6 2013-05-14 10:21:26 PDT
*** Bug 115887 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.