REGRESSION (r149749): Video becomes invisible when it starts playing at newyorkbygehry.com https://bugs.webkit.org/show_bug.cgi?id=115963

Reviewed by Dean Jackson.

Source/WebCore:

Test: media/video-remove-insert-repaints.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::insertedInto): Set m_inActiveDocument when inserted into a document.
(WebCore::HTMLMediaElement::removedFrom): Fix logging.

LayoutTests:

* media/video-remove-insert-repaints.html: Added.
* media/video-remove-insert-repaints-expected.txt: Added.
* platform/mac/media/video-remove-insert-repaints-expected.png: Added.


Canonical link: https://commits.webkit.org/134431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149989 268f45cc-cd09-0410-ab3c-d52691b4dbfc